# qcar

./: ihost.sh  setupGazebo.sh
RosGazebo/: plot.py
RosGazebo/catkin_ws/: remote.sh  txttocsv.py
RosGazebo/catkin_ws/src/qcar_contorl/: sysiddata.csv
RosGazebo/catkin_ws/src/qcar_control/: CMakeLists.txt  package.xml  vicon_data_willy.csv
RosGazebo/catkin_ws/src/qcar_control/src/: mpc_controller.py  stop.py  sysid.py  worksin cim good.py
RosGazebo/catkin_ws/src/qcar_gazebo/launch/: Track1.launch  Track1Example.launch  Track2.launch  Track2Example.launch  Track3.launch  Track3Example.launch  csv.launch  matlab.launch  round.launch  sqaure.launch
RosGazebo/catkin_ws/src/qcar_gazebo/models/cones/: bluecone.sdf  orangecone.sdf  yellowcone.sdf
RosGazebo/catkin_ws/src/qcar_gazebo/urdf/: qcar_model.xacro
RosGazebo/catkin_ws/src/qcar_gazebo/worlds/: fig8.xml  generated_world.sdf  matlab.world  round.world  smallsqaure.world  worldbuilder.py
RosGazebo/catkin_ws/src/qcar_guidance/: cone_pos.csv  cones.csv  connor.py  example_guidance_node.py  fromCSV - Copy.py  fromCSV.py  output.txt  path.py  plot.py  track.py  trajectory.py  utils.py  vehicle.py  velocity.py  vicon_data.csv  vicon_data_blue.csv  vicon_data_willy.csv
RosGazebo/catkin_ws/src/qcar_guidance/msg/: TrajectoryMessage.msg
RosGazebo/catkin_ws/src/ros_example_files/: conelocater.py  keyboard.py  manual.py  track_example.csv  track_spawner.py  vicon_data_blue.csv  vicon_data_bluetest.csv  waypoint_input.py
RosGazebo/catkin_ws/src/vicon_bridge-master/launch/: vicon.launch
